수정사항 반영 - 상세페이지

--- a/main/templates/myclass/myclass.html
+++ b/main/templates/myclass/myclass.html
@@ -21,7 +21,7 @@
                 <div class="detail_area">
                     <!-- 동영상 영역입니다. -->
                     <div class="video_area">
-                        <video id="video_ctrl" width ="100%" height="100%" controls autoplay controlsList="nodownload"  poster="" src="" />
+                        <video id="video_ctrl" width ="100%" height="100%" controls autoplay playsinline controlsList="nodownload"  poster="" src="" />
                     </div>
 
                     <input type="hidden" name="play_enable" value="{{play}}">
