--- a/main/templates/product/neopixel.html
+++ b/main/templates/product/neopixel.html
@@ -23,59 +23,47 @@
 
         <div class="point_content">Curriculum</div>
 
-        <div class="content"><strong>part1. 환경구축 </strong></div>
+        <div class="point_content_small">Maker Class</div>
+        <div class="content"><strong>환경구축 </strong></div>
         <div class="content_curriculum">
             <li>
-                 <div style="width:100%"><b>1. </b>아두이노 설치
-                     <div style="float:right;">3:54</div>
-                 </div>
+                 <div style="width:100%">1. 아두이노 설치 </div>
             </li>
             <li>
-                 <div style="width:100%"><b>2. </b>네오픽셀 라이브러리 설치
-                     <div style="float:right;">3:54</div>
-                 </div>
+                 <div style="width:100%">2. 네오픽셀 라이브러리 설치</div>
+            </li>
+            <li>
+                 <div style="width:100%">3. 시리얼 모니터</div>
             </li>
         </div>
 
-         <div class="content"  style="padding-top:20px;"><strong>part2. 키트 강의</strong></div>
+         <div class="content"  style="padding-top:20px;"><strong>키트만들기</strong></div>
         <div class="content_curriculum">
             <li>
-                 <div style="width:100%"><b>1. </b>네오픽셀 키트 만들기
-                     <div style="float:right;">12:13</div>
-                 </div>
+                 <div style="width:100%">1. 네오픽셀 키트 만들기</div>
             </li>
             <li>
-                 <div style="width:100%"><b>2. </b>네오픽셀 키트 이해하기
-                     <div style="float:right;">4:26</div>
-                 </div>
+                 <div style="width:100%">2. 네오픽셀 키트 이해하기</div>
             </li>
         </div>
 
-        <div class="content" style="padding-top:20px;"><strong>part3. 세부강의 </strong></div>
+        <div class="point_content_small">Study Class</div>
+        <div class="content"><strong>문법/이론/키트미션 </strong></div>
         <div class="content_curriculum">
             <li>
-                 <div style="width:100%"><b>1. </b>시리얼 모니터 [이론/문법]
-                     <div style="float:right;">1:48</div>
-                 </div>
+                 <div style="width:100%">1. 엠블럭 기초 사용법</div>
             </li>
             <li>
-                 <div style="width:100%"><b>2. </b>연산자 기초 [이론/키트미션]
-                     <div style="float:right;">6:02</div>
-                 </div>
+                 <div style="width:100%">2. 연산자 기초 </div>
+                <div style="width:100%">&nbsp;└&nbsp;키트미션 : 보기블럭 이용하기</div>
             </li>
             <li>
-                 <div style="width:100%"><b>3. </b>함수 [이론/키트미션]
-                     <div style="float:right;">12:17</div>
-                 </div>
-            </li>
-             <li>
-                 <div style="width:100%"><b>4. </b>조건문 [이론,문법/키트미션]
-                     <div style="float:right;">11:47</div>
-                 </div>
+                 <div style="width:100%">3. 조건문 </div>
+                <div style="width:100%">&nbsp;└&nbsp;키트미션 : 음향에 따라 표현</div>
             </li>
 
         </div>
-        <div class="content_gray" style="padding-top:20px; float:right; font-size:10px;">* 초롱초롱 눈망울 네오픽셀 아두이노 버전입니다.</div>
+        <div class="content_gray" style="padding-top:20px; float:right; font-size:10px;">* 초롱초롱 눈망울 네오픽셀 엠블럭(mblock) 버전입니다.</div>
 
          <div class="point_content">Detail</div>
          <div>
