--- a/main/templates/product/trashcan.html
+++ b/main/templates/product/trashcan.html
@@ -24,55 +24,47 @@
 
         <div class="point_content">Curriculum</div>
 
-        <div class="content"><strong>part1. 환경구축 </strong></div>
+        <div class="point_content_small">Maker Class</div>
+        <div class="content"><strong>환경구축 </strong></div>
         <div class="content_curriculum">
             <li>
-                 <div style="width:100%"><b>1. </b>아두이노 설치
-                     <div style="float:right;">3:54</div>
+                 <div style="width:100%">1. 아두이노 설치
                  </div>
             </li>
         </div>
 
-         <div class="content"  style="padding-top:20px;"><strong>part2. 키트 강의</strong></div>
+         <div class="content"  style="padding-top:20px;"><strong>키트 만들기</strong></div>
         <div class="content_curriculum">
             <li>
-                 <div style="width:100%"><b>1. </b>스마트 휴지통 키트 만들기
-                     <div style="float:right;">12:13</div>
+                 <div style="width:100%">1. 스마트 휴지통 키트 만들기
                  </div>
             </li>
             <li>
-                 <div style="width:100%"><b>2. </b>스마트 휴지통 키트 이해하기
-                     <div style="float:right;">4:26</div>
+                 <div style="width:100%">2. 스마트 휴지통 키트 이해하기
                  </div>
             </li>
         </div>
 
-        <div class="content" style="padding-top:20px;"><strong>part3. 세부강의 </strong></div>
+        <div class="point_content_small">Study Class</div>
+        <div class="content"><strong>문법/이론/키트미션</strong></div>
         <div class="content_curriculum">
             <li>
-                 <div style="width:100%"><b>1. </b>시리얼 모니터 [이론/문법]
-                     <div style="float:right;">1:48</div>
-                 </div>
+                 <div style="width:100%">1. 시리얼 모니터</div>
             </li>
             <li>
-                 <div style="width:100%"><b>2. </b>서보모터 [이론/실습]
-                     <div style="float:right;">4:25</div>
-                 </div>
+                 <div style="width:100%">2. 서보모터</div>
             </li>
             <li>
-                 <div style="width:100%"><b>3. </b>연산자 기초 [이론/키트미션]
-                     <div style="float:right;">6:02</div>
-                 </div>
+                 <div style="width:100%">3. 연산자 기초</div>
+                 <div style="width:100%">&nbsp;└&nbsp;키트미션 : 뚜껑을 꼬옥 닫기</div>
             </li>
              <li>
-                 <div style="width:100%"><b>4. </b>조건문 [이론,문법/키트미션]
-                     <div style="float:right;">11:47</div>
-                 </div>
+                 <div style="width:100%">4. 조건문 초급</div>
+                 <div style="width:100%">&nbsp;└&nbsp;키트미션 : 반대로 동작하기</div>
             </li>
             <li>
-                 <div style="width:100%"><b>5. </b>초음파 센서 [이론/키트미션]
-                     <div style="float:right;">12:17</div>
-                 </div>
+                 <div style="width:100%">5. 초음파 센서</div>
+                 <div style="width:100%">&nbsp;└&nbsp;키트미션 : 거리와 각도조절</div>
             </li>
         </div>
         <div class="content_gray" style="padding-top:20px; float:right; font-size:10px;">* 스마트 휴지통 아두이노 버전입니다.</div>
