구매전 유의사항 문구 변경

--- a/main/templates/product/common.html
+++ b/main/templates/product/common.html
@@ -61,14 +61,21 @@
         <div class="content_gray">
             <li>-  &nbsp;&nbsp;런코딩 이용권은 동시에 여러 기기에서 접속할 수 없습니다.</li>
             <li>-  &nbsp;&nbsp;런코딩 이용권은 해외에서 이용할 수 없습니다.</li>
-            <li>-  &nbsp;&nbsp;런코딩 이용권의 이용기간은 일시정지할 수 없습니다.</li>
-            <li>-  &nbsp;&nbsp;런코딩 이용권은 구매 후 7일 이내에 3개 미만의 유닛을 열람한 경우 전액 환불이 가능합니다.</li>
-            <li>-  &nbsp;&nbsp;3개 이상의 유닛을 열람하신 경우 부분환불로 처리되며, 부분환불의 경우 제반 수수료와 이미 학습한 기간<br/>
-            &nbsp;&nbsp;&nbsp;(결제 완료 후 환불 의사 표시까지의 기간)만큼의 금액을 차감하고 남은 금액을 불합니다.<br/>
-            &nbsp;&nbsp;&nbsp;이 때, 총 이용기간이 아닌 정상제공 기간을 기준으로 환불을 진행합니다.</li>
-            <li>-  &nbsp;&nbsp;고객의 환불 의사 표시에 대해 회사가 회산한 날로부터 영업일 기준 3일 이내에 환불 처리되며, 환불이<br/>
-            &nbsp;&nbsp;&nbsp;불가한 경우 이를 사전에 고지합니다.</li>
-            <li>-  &nbsp;&nbsp;교재를 비롯한 실물 상품은 오후 12시 이전 구매 시 당일 출고, 12시 이후 구매시 익일 출고됩니다.<br/>
+            <li>-  &nbsp;&nbsp;런코딩 이용권의 이용기간은 일시정지할 수 없습니다.</li><br/>
+            <li>-  &nbsp;&nbsp;런코딩 이용권의 환불 규정은 아래와 같습니다.</li>
+            &nbsp;&nbsp;&nbsp;* 강의시청이 시작 된 경우.<br/>
+            &nbsp;&nbsp;&nbsp;* 코딩 키트가 오픈된 경우.<br/>
+            &nbsp;&nbsp;&nbsp;* 배송 후 9일이 지난 경우.<br/>
+            &nbsp;&nbsp;&nbsp;(본 상품 구매의 특성상 취소, 교환, 환불이 어려울 수 있습니다.)</li><br/>
+            <li>-  &nbsp;&nbsp;환불 신청은 주문내역 > 상세보기 > 환불요청에서 진행 할 수 있습니다.</li><br/>
+            <li>-  &nbsp;&nbsp;보내주신 상품에 이상이 없을 경우 배송비에 대한 처리는 아래와 같습니다. <br/>
+                &nbsp;&nbsp;&nbsp; * 배송비(3천원)를 제한 금액을 카드 부분취소. <br/>
+             &nbsp;&nbsp;&nbsp;  * 왕복 배송비(6천원)를 입금시 전액환불. </li><br/>
+            <li>-  &nbsp;&nbsp;카드 취소 금액 확인은 취소 처리 시작 후 영업일 기준 7-10일 정도 소요 될 수 있으며, <br/>
+             &nbsp;&nbsp;&nbsp;  자세한 확인은 카드사에 문의 부탁드립니다. </li><br/>
+            <li>-  &nbsp;&nbsp;고객의 환불 의사 표시에 대해 회사가 회산한 날로부터 영업일 기준 3일 이내에 환불 처리되며,<br/>
+            &nbsp;&nbsp;&nbsp; 환불이 불가한 경우 이를 사전에 고지합니다.</li>
+            <li>-  &nbsp;&nbsp;코딩 키트 상품은 오후 12시 이전 구매 시 당일 출고, 12시 이후 구매시 익일 출고됩니다.<br/>
             &nbsp;&nbsp;&nbsp;출고취소 요청은 구매 당일 오후 1시까지만 가능합니다.</li>
         </div>
     </div>
