--- a/main/templates/product/common.html
+++ b/main/templates/product/common.html
@@ -59,23 +59,31 @@
 
         <div class="point_content"><strong>구매 전 유의 사항</strong></div>
         <div class="content_gray">
-            <li>-  &nbsp;&nbsp;런코딩 이용권은 동시에 여러 기기에서 접속할 수 없습니다.</li>
-            <li>-  &nbsp;&nbsp;런코딩 이용권은 해외에서 이용할 수 없습니다.</li>
-            <li>-  &nbsp;&nbsp;런코딩 이용권의 이용기간은 일시정지할 수 없습니다.</li><br/>
-            <li>-  &nbsp;&nbsp;런코딩 이용권의 환불 규정은 아래와 같습니다.</li>
-            &nbsp;&nbsp;&nbsp;* 강의시청이 시작 된 경우.<br/>
-            &nbsp;&nbsp;&nbsp;* 코딩 키트가 오픈된 경우.<br/>
-            &nbsp;&nbsp;&nbsp;* 배송 후 9일이 지난 경우.<br/>
-            &nbsp;&nbsp;&nbsp;(본 상품 구매의 특성상 취소, 교환, 환불이 어려울 수 있습니다.)</li><br/>
-            <li>-  &nbsp;&nbsp;환불 신청은 주문내역 > 상세보기 > 환불요청에서 진행 할 수 있습니다.</li><br/>
-            <li>-  &nbsp;&nbsp;보내주신 상품에 이상이 없을 경우 배송비에 대한 처리는 아래와 같습니다. <br/>
-                &nbsp;&nbsp;&nbsp; * 배송비(3천원)를 제한 금액을 카드 부분취소. <br/>
-             &nbsp;&nbsp;&nbsp;  * 왕복 배송비(6천원)를 입금시 전액환불. </li><br/>
-            <li>-  &nbsp;&nbsp;카드 취소 금액 확인은 취소 처리 시작 후 영업일 기준 7-10일 정도 소요 될 수 있으며, <br/>
-             &nbsp;&nbsp;&nbsp;  자세한 확인은 카드사에 문의 부탁드립니다. </li><br/>
-            <li>-  &nbsp;&nbsp;고객의 환불 의사 표시에 대해 회사가 회산한 날로부터 영업일 기준 3일 이내에 환불 처리되며,<br/>
-            &nbsp;&nbsp;&nbsp; 환불이 불가한 경우 이를 사전에 고지합니다.</li>
-            <li>-  &nbsp;&nbsp;코딩 키트 상품은 오후 12시 이전 구매 시 당일 출고, 12시 이후 구매시 익일 출고됩니다.<br/>
-            &nbsp;&nbsp;&nbsp;출고취소 요청은 구매 당일 오후 1시까지만 가능합니다.</li>
+            <li>배송</li>
+            <li>-  &nbsp;&nbsp;코딩키트 상품은 오후 12시 이전 구매 시 당일 출고 됩니다. (주말/공휴일 주문건 제외)</li>
+            <li>-  &nbsp;&nbsp;당일 발송을 원칙으로 하고 있으나, 재고 보유 상황에 따라 발송일이 다소 차이가 발생될 수 있습니다.</li>
+            <li>-  &nbsp;&nbsp;전국 배송 가능(해외배송불가), 제주/산간지역은 배송료 추가(3,000원) 됩니다.</li>
+            <br/>
+
+            <li>반품교환</li>
+            <li>-  &nbsp;&nbsp;상세내용은 홈페이지 > 커뮤니티 > payment에서 확인해주시기 바랍니다. </li>
+            <br/>
+
+            <li>[제품의 환불/교환이 불가한 경우]</li>
+            <li>-  &nbsp;&nbsp;온라인 강의 시청이 시작된 경우</li>
+            <li>-  &nbsp;&nbsp;코딩 키트의 포장 개봉(훼손/파손/변형)된 경우</li>
+            <li>-  &nbsp;&nbsp;제품 수령일 기준 7일(주말, 공휴일 포함) 초과한 경우</li>
+            <br/>
+
+            <li>[제품의 환불/교환이 가능한 경우]</li>
+            <li>-  &nbsp;&nbsp;수령한 제품의 불량, 파손, 오배송 등으로 사용이 불가한 경우 수령일 기준으로 7일 이내 <br/>
+             &nbsp;&nbsp;&nbsp;(주말/공휴일 포함) 환불요청하는 경우   </li>
+            <li>-  &nbsp;&nbsp;고객 변심인 경우 포장을 개봉하지 않고, 강의 시청이 시작되지 않은 경우</li>
+            <br/>
+
+            <li>온라인 수강권</li>
+            <li>-  &nbsp;&nbsp;동시에 여러 기기에서 접속할 수 없습니다.</li>
+            <li>-  &nbsp;&nbsp;해외에서 강의시청이 불가합니다.</li>
+            <li>-  &nbsp;&nbsp;이용기간은 일시 정지 할 수 없습니다.</li>
         </div>
     </div>
