--- a/main/templates/runAdmin/pay_list.html
+++ b/main/templates/runAdmin/pay_list.html
@@ -9,6 +9,8 @@
                 <li class="admin_active"><a href="/pay_list/">구매 데이터 조회</a></li>
                 <li><a href="/user_list/">사용자 조회</a></li>
                 <li><a href="/refund_list/">환불</a></li>
+                <li><a href="/coupon_list/">쿠폰 리스트</a></li>
+<!--                <li><a href="/upload/">파일 업로드</a></li>-->
                  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <li><a href="https://admin.iamport.kr/users/login" target="_blank">아임포트 관리자</a></li>
                 <li><a href="https://partner.danalpay.com/account/login?next=%2F#" target="_blank">다날 (휴대폰인증)</a></li>
