--- a/main/templates/runAdmin/upload_file.html
+++ b/main/templates/runAdmin/upload_file.html
@@ -7,10 +7,9 @@
             <ul>
                 <li><a href="/deposit_list/">무통장 입금 조회</a></li>
                 <li><a href="/pay_list/">구매 데이터 조회</a></li>
-                <li class="admin_active"><a href="/user_list/">사용자 조회</a></li>
+                <li><a href="/user_list/">사용자 조회</a></li>
                 <li><a href="/refund_list/">환불</a></li>
-                <li><a href="/coupon_list/">쿠폰 리스트</a></li>
-<!--                <li><a href="/upload/">파일 업로드</a></li>-->
+                <li class="admin_active"><a href="/upload/">파일 업로드</a></li>
                  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <li><a href="https://admin.iamport.kr/users/login" target="_blank">아임포트 관리자</a></li>
                 <li><a href="https://partner.danalpay.com/account/login?next=%2F#" target="_blank">다날 (휴대폰인증)</a></li>
@@ -37,6 +36,12 @@
             </div>
         </div>
     </div>
+
+     <form action="/upload_file/" method="POST" enctype="multipart/form-data">
+          {% csrf_token %}
+        <input type="file" name="file1" accept="image/*" />
+        <input type="submit" />
+    </form>
 
     <div style="width: 1120px; font-size: 20px !important; padding-bottom:10px;">total : {{total_count}}</div>
     <div style="overflow: hidden; position: relative; border: 0px; width: 100%;">
