--- a/main/templates/myclass/myclass_Bonus.html
+++ b/main/templates/myclass/myclass_Bonus.html
@@ -36,7 +36,7 @@
                                 <div id="div1">
                                     <p>
                                      {% if kit_itmeInfo.iteminfo_1.type == 'download' %}
-                                        <a href='/static/resource/data/download/{{kit_itmeInfo.prd.prdCode}}/{{kit_itmeInfo.iteminfo_1.downdata}}' download>{{kit_itmeInfo.iteminfo_1.downdata_name}}</a>
+                                        <a href='/static/resource/data/download/BonusClass/{{kit_itmeInfo.iteminfo_1.downdata}}' download>{{kit_itmeInfo.iteminfo_1.downdata_name}}</a>
                                         {% endif %}
                                     {% if kit_itmeInfo.iteminfo_1.type == 'link' %}
                                         <a href='{{kit_itmeInfo.iteminfo_1.downdata}}' target="_blank">{{kit_itmeInfo.iteminfo_1.downdata_name}}</a>
