--- a/main/templates/runAdmin/coupon_list.html
+++ b/main/templates/runAdmin/coupon_list.html
@@ -5,7 +5,7 @@
         <div class="admin_sub_visual">
              <div class="tabs section_wrap">
                 <ul>
-                   <a href="/deposit_list/">무통장 입금 조회</a></li>
+                    <li><a href="/deposit_list/">무통장 입금 조회</a></li>
                     <li><a href="/pay_list/">구매 데이터 조회</a></li>
                     <li><a href="/user_list/">사용자 조회</a></li>
                     <li><a href="/refund_list/">환불</a></li>
