--- a/main/templates/runAdmin/upload_file.html
+++ b/main/templates/runAdmin/upload_file.html
@@ -19,174 +19,115 @@
     </div>
 
     <div class="codingLounge_list">
-        <div class="filter_area fixed">
-            <div class="search_area">
-                <div class="input_area_admin">
-                     <input type="date" name="start_date" id="start_date" value="{{start_date}}">
-                </div>
-                <div class="input_area_admin">
-                     <input type="date" name="end_date" id="end_date" value="{{end_date}}">
-                </div>
-                <div class="input_area_admin" >
-                     <input type="text" name="search_box" id="search_box" value='{{search}}' placeholder="아이디">
-                </div>
-                 <div class="btn_area">
-                    <a class="btn" href="javascript:void(0);" onclick="javascript:goSearch(1);">&nbsp;조회하기&nbsp;</a>
-                 </div>
-            </div>
+        <div>
+              <select id="status" name="status" style="width:120px; height:35px; border:1px solid #d4d4d4; line-height:30px; font-size:15px;" onchange="change_form(this.value);">
+               <option value=0>메뉴 선택</option>
+               <option value='naverstore'>네이버 쇼핑</option>
+               <option value='delivery'>배송 리스트</option>
+               <option value='lounge'>라운지</option>
+             </select>
         </div>
-    </div>
+        <br/>
 
-     <form action="/upload_file/" method="POST" enctype="multipart/form-data">
-          {% csrf_token %}
-        <input type="file" name="file1" accept="image/*" />
-        <input type="submit" />
-    </form>
+         <div id="naverstore" class="filebox">
+             <form action="/upload_file/" method="POST" enctype="multipart/form-data">
+                  {% csrf_token %}
+                 <input class="upload-name" value="runcodinglist_20201201 txt 파일" disabled="disabled" style="width:300px;">
+                 <input type="hidden" value="naverstore" id="naver" name="naver">
 
-    <div style="width: 1120px; font-size: 20px !important; padding-bottom:10px;">total : {{total_count}}</div>
-    <div style="overflow: hidden; position: relative; border: 0px; width: 100%;">
-        <table id="payList" style="width:100%;">
-            <thread>
-                <tr class="row">
-                    <th class="admin_list">이름</th>
-                     <th class="admin_list">결제일</th>
-                    <th class="admin_list_id">주문번호</th>
-                    <th class="admin_list_id">주문키트</th>
-                    <th class="admin_list">키트가격</th>
-                    <th class="admin_list">옵션</th>
-                    <th class="admin_list">강의상태</th>
-                    <th class="admin_list">결제방법</th>
-                </tr>
-            </thread>
-            <tbody>
-                {% for myclass in myclass_info %}
-                <tr class="row">
-                    <td class="admin_list_body">
-                        <a href="javascript:alert('아이디 : {{myclass.user_id}}');">{{user_info.regi_name}}</a>
-                    </td>
-                    <td class="admin_list_body date"> {{myclass.start_time | date:'Y-m-d' }}</td>
-                    <td class="admin_list_id_body">{{myclass.pay_num}}</td>
-                    <td class="admin_list_body">
-                        <a href="javascript:alert('키드번호 : {{myclass.prd.prd_code}}');">{{myclass.prd.title}}</a>
-                    </td>
-                    <td class="admin_list_body">{{myclass.prd.price}}원</td>
-                    <td class="admin_list_body">
-                        {% for order_list in order_info %}
-                            {% if myclass.pay_num == order_list.pay_num %}
-                                {% if myclass.prd.prd_code == order_list.prd.prd_code %}
-                                    {% if order_list.option1_selectNum == 2 %}
-                                        {{myclass.prd.option1}}({{myclass.prd.option1_price}}원)<br/>
-                                    {% endif%}
-                                    {% if order_list.option2_selectNum == 2 %}
-                                        {{myclass.prd.option2}}({{myclass.prd.option2_price}}원)<br/>
-                                    {% endif%}
-                                    {% if order_list.option3_selectNum == 2 %}
-                                        {{myclass.prd.option3}}({{myclass.prd.option3_price}}원)<br/>
-                                    {% endif%}
-                                {% endif %}
-                            {% endif %}
-                        {% endfor %}
-                    </td>
-                    <td class="admin_list_body">
-                        {% if myclass.play == 'D' %}
-                        강의시작 X
-                        {% else %}
-                        <a href="javascript:alert('영상 : {{myclass.play_video}}, 시간: {{myclass.play_time}}');">강의시작 O</a>
-                        {% endif %}
-                    </td>
-                    <td class="admin_list_body date">
-                        {% for pay_list in pay_info %}
-                            {% if myclass.pay_num == pay_list.pay_num %}
-                                <input type="hidden" id="prd_price_{{forloop.counter0}}" name="prd_price_{{forloop.counter0}}" value="{{pay_list.prd_price}}">
-                                <input type="hidden" id="delivery_price_{{forloop.counter0}}" name="delivery_price_{{forloop.counter0}}" value="{{pay_list.delivery_price}}">
-                                <input type="hidden" id="prd_total_price_{{forloop.counter0}}" name="prd_total_price_{{forloop.counter0}}" value="{{pay_list.prd_total_price}}">
+                <label for="ex_filename">업로드 파일 선택</label>
+                <input type="file" name="file" id="ex_filename" class="upload-hidden" accept="text/*" />
+                <button type="button" onClick="javascript:submit();" style="border:1px solid #ebebeb; font-size:15px; border-radius: .25em; background-color: #e1a394; padding: .5em .75em;">업로드</button>
+            </form>
+         </div>
 
-                                <a href="javascript:alert('총결제금액 : {{pay_list.prd_price}} + {{pay_list.delivery_price}} = {{pay_list.prd_total_price}} \n배송일:{{pay_list.delivery_time | date:'Y-m-d' }}');">{{pay_list.payWay.name}}</a>
+        <div id="delivery" class="filebox">
+             <form action="/upload_file/" method="POST" enctype="multipart/form-data">
+                  {% csrf_token %}
+                 <input class="upload-name" value="csv 파일선택" disabled="disabled">
+                  <input type="hidden" value="delivery_list" id="delivery_id" name="delivery_id">
 
-                                {% if pay_list.payWay.value == 'deposit' %}
-                                  <br/>{{pay_list.payWay_name}}
-                                {% endif%}
+                <label for="delivery_filename">업로드 파일 선택</label>
+                <input type="file" name="file" id="delivery_filename" class="upload-hidden" accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" />
+                <button type="button" onClick="javascript:submit();" style="border:1px solid #ebebeb; font-size:15px; border-radius: .25em; background-color: #e1a394; padding: .5em .75em;">업로드</button>
+            </form>
+         </div>
 
-                            {% endif %}
-                        {% endfor %}
-                    </td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+         <div id="upload_img" class="filebox">
+             <form action="/upload_file/" method="POST" enctype="multipart/form-data">
+                  {% csrf_token %}
 
-        <div id="total_data" class="page"><span>조회 데이터가 없습니다.</span></div>
-        <div class="page">
-            <ul id="paging" class="pagination modal"></ul>
+                 <input type="text" placeholder="라운지 제목" id="title" name="title">
+                 <input type="text" placeholder="user" id="user" name="user">
+                 <input type="text" placeholder="유투브 영상번호" id="video" name="video"><br/><br/>
+                 <input type="text" placeholder="trashcan/neopixel/AI 중 1" id="kit" name="kit" style="width:600px;">
+
+                 <br/><br/>
+
+                 <input class="upload-name" value="이미지 파일선택" disabled="disabled">
+                 <input type="hidden" value="lounge_list" id="img_id" name="img_id">
+
+                <label for="img_filename">업로드 파일 선택</label>
+                <input type="file" name="file" id="img_filename" class="upload-hidden" accept="image/*" />
+                <button type="button" onClick="javascript:submit();" style="border:1px solid #ebebeb; font-size:15px; border-radius: .25em; background-color: #e1a394; padding: .5em .75em;">업로드</button>
+            </form>
+         </div>
+
+        <div id="result">
+            <p>{{txt}}</p>
         </div>
+
     </div>
 </div>
 
 
     <script>
-     $(document).ready(function() {
-       $('#status').val('{{status}}').prop("selected",true);
-       $('#page_cnt').val('{{page_cnt}}').prop("selected",true);
+    $(document).ready(function(){
+      $("#naverstore").hide();
+      $("#delivery").hide();
+      $("#upload_img").hide();
 
-       var total = '{{total_count}}';
-       if (total == 0)
-       {
-            $("#total_data").show();
-       }
-       else
-       {
-            $("#total_data").hide();
-       }
+        var fileTarget = $('.filebox .upload-hidden');
 
-
-       var page = '{{last_page}}';
-       var cur_page = '{{paging_num}}';
-
-       page *= 1;
-
-       for(var i = 1; i <= page; i ++)
-       {
-            if(i == cur_page)
-                document.getElementById('paging').innerHTML += "<li><a href='javascript:void(0);' onclick='javascript:goSearch(" + i + ");' class='active num' >" + i + "</a></li>";
+        fileTarget.on('change', function()
+        { // 값이 변경되면
+            if(window.FileReader)
+            { // modern browser
+                var filename = $(this)[0].files[0].name;
+            }
             else
-                document.getElementById('paging').innerHTML += "<li><a href='javascript:void(0);' onclick='javascript:goSearch(" + i + ");' class='num' >" + i + "</a></li>";
-       }
+            { // old IE
+                var filename = $(this).val().split('/').pop().split('\\').pop(); // 파일명만 추출
+            }
+            // 추출한 파일명 삽입
+            $(this).siblings('.upload-name').val(filename);
+        });
+    });
 
-     });
-
-     function goSearch(paging_num)
-     {
-        var start_date = document.getElementById('start_date').value;
-        var end_date = document.getElementById('end_date').value;
-        var searchBox = $('[name=search_box]').val();
-
-        if(start_date > end_date)
+    function change_form(value)
+    {
+        if(value == 'naverstore')
         {
-            alert("날짜 설정을 다시 해주세요");
-            return false;
+           $("#naverstore").show();
+           $("#delivery").hide();
+           $("#upload_img").hide();
+           $("#result").hide();
         }
-
-        if(searchBox == "")
+        else if(value == 'delivery')
         {
-            alert("검색 내용을 입력하세요.");
-            return false;
+           $("#delivery").show();
+           $("#naverstore").hide();
+           $("#upload_img").hide();
+           $("#result").hide();
         }
+        else if(value == 'lounge')
+        {
+           $("#delivery").hide();
+           $("#naverstore").hide();
+           $("#upload_img").show();
+           $("#result").hide();
+        }
+    }
 
-        var newForm = $('<form></form>');
-
-        newForm.attr("name", "user_search");
-        newForm.attr("method", "post");
-        newForm.attr("action", "/user_search/");
-
-        newForm.append($('<input/>', {type: 'hidden', name: 'csrfmiddlewaretoken', value : '{{ csrf_token }}'}));
-        newForm.append($('<input/>', {type: 'hidden', name: 'start_date', value : start_date }));
-        newForm.append($('<input/>', {type: 'hidden', name: 'end_date', value : end_date }));
-        newForm.append($('<input/>', {type: 'hidden', name: 'searchBox', value : searchBox }));
-        newForm.append($('<input/>', {type: 'hidden', name: 'paging_num', value : paging_num }));
-
-        newForm.appendTo('body');
-        newForm.submit();
-
-     }
     </script>
 </body></html>
