--- a/main/templates/runAdmin/pay_list.html
+++ b/main/templates/runAdmin/pay_list.html
@@ -10,7 +10,7 @@
                 <li><a href="/user_list/">사용자 조회</a></li>
                 <li><a href="/refund_list/">환불</a></li>
                 <li><a href="/coupon_list/">쿠폰 리스트</a></li>
-<!--                <li><a href="/upload/">파일 업로드</a></li>-->
+                <li><a href="/upload/">파일 업로드</a></li>
                  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <li><a href="https://admin.iamport.kr/users/login" target="_blank">아임포트 관리자</a></li>
                 <li><a href="https://partner.danalpay.com/account/login?next=%2F#" target="_blank">다날 (휴대폰인증)</a></li>
@@ -60,7 +60,6 @@
         <table id="payList" style="width:100%;">
             <thread>
                 <tr class="row">
-                    <th class="admin_list_check">&nbsp;</th>
                     <th class="admin_list">이름</th>
                     <th class="admin_list_id">아이디</th>
                     <th class="admin_list_id">주문번호</th>
@@ -75,18 +74,6 @@
             <tbody>
                 {% for deposit in pay_info %}
                 <tr class="row">
-                    <td class="admin_list_body">
-                        <input type="hidden" name="payIdx_{{forloop.counter0}}" id="payIdx_{{forloop.counter0}}" value={{deposit.pay_idx}}>
-                         {% if deposit.pay_result == 0 %}
-                             {% if ok_status == deposit.pay_user_status.userStatus_idx %}
-                             <input type="checkbox" name="idxs" value={{deposit.pay_idx}}">
-                             {%else%}
-                             <input type="checkbox" disabled name="idxs" value={{deposit.pay_idx}}">
-                             {% endif %}
-                        {%else%}
-                        <input type="checkbox" disabled name="idxs[]" value={{deposit.pay_idx}}">
-                        {% endif %}
-                    </td>
                     <td class="admin_list_body">{{deposit.pay_user.regi_name}}</td>
                     <td class="admin_list_id_body">{{deposit.pay_user.regi_email}}</td>
                     <td class="admin_list_id_body">{{deposit.pay_num}}</td>
@@ -116,7 +103,7 @@
                     {% else %}
                         {% if deposit.pay_result == 0 %}
                             {% if ok_status == deposit.pay_user_status.userStatus_idx %}
-                            <td class="admin_list_body"><a href="javascript:void(0);" onClick="javascript:change({{deposit.pay_idx}}, {{paging_num}});" style="cursor:pointer;color:red;"><strong>배송중 변경하기</strong></a></td>
+                            <td class="admin_list_body">배송준비</td>
                             {% else %}
                             <td class="admin_list_body">배송중</td>
                             {% endif %}
@@ -139,10 +126,6 @@
         <div class="page">
             <ul id="paging" class="pagination modal"></ul>
         </div>
-    </div>
-
-    <div style="width:100%; font-size: 20px !important; padding-top:50px; padding-bottom:150px;">
-        <button id="delivery" type="button" class="delivery_chg" onClick="javascript:change('all');">배송중으로 변경</button>
     </div>
 </div>
 
@@ -287,70 +270,5 @@
             document.body.removeChild(elem);
         }
      }
-
-
-    function change(pay_idx, paging_num)
-    {
-        var start_date = document.getElementById('start_date').value;
-        var end_date = document.getElementById('end_date').value;
-        var page_cnt = document.getElementById('page_cnt').value;
-        var searchBox = $('[name=search_box]').val();
-
-        if(start_date == "" || end_date == "")
-        {
-            alert("날짜선택하세요");
-            return false;
-        }
-
-        if(start_date > end_date)
-        {
-            alert("날짜 설정을 다시 해주세요");
-            return false;
-        }
-
-
-        var status = document.getElementById("status").selectedIndex;
-        if(status > 0)
-            status = document.getElementById("status").value;
-
-        if(pay_idx == 'all')
-        {
-            var chks = document.getElementsByName('idxs');
-            pay_idx = '';
-             for (var i=0,m=chks.length;i<m ;i++)
-             {
-                if (chks[i].checked == true)
-                {
-                     var payIndex = document.getElementById("payIdx_" + i).value;
-
-                     pay_idx += payIndex + ",";
-                }
-             }
-
-             if(pay_idx == '')
-             {
-                alert("체크된 내용이 없습니다");
-                return false;
-             }
-        }
-
-        var newForm = $('<form></form>');
-
-        newForm.attr("name", "pay_change");
-        newForm.attr("method", "post");
-        newForm.attr("action", "/pay_change/");
-
-        newForm.append($('<input/>', {type: 'hidden', name: 'csrfmiddlewaretoken', value : '{{ csrf_token }}'}));
-        newForm.append($('<input/>', {type: 'hidden', name: 'start_date', value : start_date }));
-        newForm.append($('<input/>', {type: 'hidden', name: 'end_date', value : end_date }));
-        newForm.append($('<input/>', {type: 'hidden', name: 'searchBox', value : searchBox }));
-        newForm.append($('<input/>', {type: 'hidden', name: 'status', value : status }));
-        newForm.append($('<input/>', {type: 'hidden', name: 'pay_idx', value : pay_idx }));
-        newForm.append($('<input/>', {type: 'hidden', name: 'paging_num', value : paging_num }));
-        newForm.append($('<input/>', {type: 'hidden', name: 'page_cnt', value : page_cnt }));
-
-        newForm.appendTo('body');
-        newForm.submit();
-    }
     </script>
 </body></html>
